# DataViewer

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
dataviewer/: app.py  cli.py  config.py  data_indexing.py  db.py  response_types.py  row_visualizer_plugin.py
dataviewer-ui/: agents.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dataviewer-ui/src/: App.tsx  DataViewer.tsx  index.css  main.tsx
dataviewer-ui/src/components/: Bookmarks.tsx  ConfigSidebar.tsx  Header.tsx  PluginSettings.tsx  RowDockManager.tsx  SplitHolder.tsx
dataviewer-ui/src/components/DataViewer/: CellPreviewSidebar.tsx  DataViewer.tsx  FilterChip.tsx  FilterEditor.tsx  Filters.tsx  Header.tsx  ImageBinaryCell.tsx  SortEditor.tsx
dataviewer-ui/src/components/RowPanels/: CustomRowPanel.tsx  CustomRowTab.tsx  DefaultRowPanel.tsx  types.ts
dataviewer-ui/src/components/ui/: button.tsx
dataviewer-ui/src/contexts/: AppContext.tsx  PluginContext.tsx
dataviewer-ui/src/hooks/: useData.tsx
dataviewer-ui/src/services/: api.ts
dataviewer/plugins/: routes.py  test_plugin.py
dataviewer/webui/: index.html
dataviewer/webui/assets/: index-C-l_QGZg.css  index-C5X4Jdwo.js  index-C7UssWc3.js  index-CYlcu3aL.js  index-D1G-2I-D.js  index-D9PkxDBK.css  index-QjsJ1kvB.css  index-VY4WADb6.css
notebooks/: explore.ipynb
tests/: test_app_row_visualization_reload.py  test_data_indexing.py  test_row_visualizer_plugin.py  test_smoke.py
