[project]
name = "dataviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi[standard]>=0.128.8",
    "lancedb>=0.29.2",
    "pydanclick[griffe]>=0.5.1",
    "pydantic-settings>=2.12.0",
    "pylance>=2.0.0",
    "rich>=14.3.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.4",
    "pytest>=9.0.2",
]
