[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "duckdb>=1.4.4",
    "fastapi[standard]>=0.128.8",
    "lancedb>=0.29.2",
    "polars>=1.38.1",
    "pydanclick[griffe]>=0.5.1",
    "pydantic-settings>=2.12.0",
    "pylance>=2.0.0",
    "rich>=14.3.2",
    "uvicorn>=0.32.0",
]

[project.scripts]
dataviewer = "dataviewer.cli:main"

[tool.setuptools.packages.find]
include = ["dataviewer*"]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.4",
    "pytest>=9.0.2",
]
